--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,3 +6,32 @@ img.recipe-show{
 	height: auto;
 
 }
+
+.recipe-box {
+	height: 600px;
+	position: relative;
+	box-shadow: 10px 10px 5px #888888;
+	background: #ecf0f1
+
+}
+
+img.recipe-index {
+	width: 100%;
+	height: 70%;
+	object-fit: cover;
+
+
+}
+
+.recipe-box ul {
+	list-style-type: none;
+	position: absolute;
+	bottom: 0;
+
+}
+
+.recipe-box li:first-child {
+	font-size: 24px
+
+
+}
