--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <%= form_with(model: recipe, local: true) do |form| %>
   <% if recipe.errors.any? %>
     <div id="error_explanation">
@@ -62,3 +63,4 @@
     <%= form.submit %>
   </div>
 <% end %>
+</div>
