changed h1 and title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Tinos:400,700i" rel="stylesheet">
     <title>RecipeDb</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
