--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -13,6 +13,19 @@ p, ol, ul, td {
   line-height: 18px;
 }
 
+h1 {
+  font-family: 'Tinos', serif;
+  font-size: 24px;
+  line-height: 30px;
+
+}
+
+title {
+  font-family: 'Tinos', serif;
+  font-size: 30px;
+  line-height: 36px;
+}
+
 pre {
   background-color: #eee;
   padding: 10px;
