--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,4 @@
 <div class="container">
-<h1>About Page Placeholder</h1>
+<h1>About</h1>
+<p>I created this Heroku application so I could upload some of my favorite recipes. Enjoy!</p>
 </div>
