--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,7 @@
 @import "bootstrap";
 
 img.recipe-show{
-	width: 100px;
+	width: 200px;
 	height: auto;
 
 }
@@ -34,4 +34,17 @@ img.recipe-index {
 	font-size: 24px
 
 
+}
+
+h1 {
+  font-family: 'Tinos', serif;
+  font-size: 24px;
+  line-height: 30px;
+
+}
+
+title {
+  font-family: 'Tinos', serif;
+  font-size: 30px;
+  line-height: 36px;
 }
