--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,13 +38,17 @@ img.recipe-index {
 
 h1 {
   font-family: 'Tinos', serif;
-  font-size: 24px;
-  line-height: 30px;
+  font-style: italic;
+  font-weight:bold;
+  font-size: 36px;
+  line-height: 40px;
 
 }
 
 title {
   font-family: 'Tinos', serif;
-  font-size: 30px;
-  line-height: 36px;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 50px;
 }
