--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,3 +52,13 @@ title {
   font-size: 40px;
   line-height: 50px;
 }
+
+li {
+  font-family: 'Tinos', serif;
+  font-style: italic;
+  font-weight:bold;
+  font-size: 36px;
+  line-height: 40px;
+	
+
+}
