changed description and link_to fonts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,12 +53,19 @@ title {
   line-height: 50px;
 }
 
-li {
-  font-family: 'Tinos', serif;
-  font-style: italic;
-  font-weight:bold;
+.description-text {
+  font-family: 'Martel Sans', serif;
   font-size: 16px;
   line-height: 16px;
-	
 
 }
+
+
+.link-to-text {
+  font-family: 'Martel Sans', serif;
+  font-size: 16px;
+  line-height: 16px;
+
+}
+
+	
