--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -11,8 +11,8 @@
       <% end %>
         <ul>
           <li><%= recipe.title %></li>
-          <li><%= recipe.description %></li>
-          <li><%= link_to 'Show', recipe %> |
+          <li class="description-text"><%= recipe.description %></li>
+          <li class="link-to-text"><%= link_to 'Show', recipe %> |
           <%= link_to 'Edit', edit_recipe_path(recipe) %> |
           <%= link_to 'Destroy', recipe, method: :delete, data: { confirm: 'Are you sure?' } %></li>
         </ul>
