--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,6 +60,16 @@ title {
 
 }
 
+li {
+  font-family: 'Tinos', serif;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+	
+
+}
+
 
 .link-to-text {
   font-family: 'Martel Sans', serif;
