added class for recipe title text

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,12 +60,12 @@ title {
 
 }
 
-li {
+.title-text {
   font-family: 'Tinos', serif;
   font-weight: bold;
+  font-style: italic;
   font-size: 24px;
   line-height: 30px;
-	
 
 }
 
