--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,7 +10,7 @@
         <%= link_to (image_tag recipe.image.url, class: "recipe-index"), recipe %>
       <% end %>
         <ul>
-          <li><%= recipe.title %></li>
+          <li class="title-text"><%= recipe.title %></li>
           <li class="description-text"><%= recipe.description %></li>
           <li class="link-to-text"><%= link_to 'Show', recipe %> |
           <%= link_to 'Edit', edit_recipe_path(recipe) %> |
