--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,7 +37,7 @@ img.recipe-index {
 }
 
 h1 {
-  font-family: 'Tinos', serif;
+  font-family: 'Oleo Script', serif;
   font-style: italic;
   font-weight:bold;
   font-size: 36px;
@@ -46,7 +46,7 @@ h1 {
 }
 
 title {
-  font-family: 'Tinos', serif;
+  font-family: 'Oleo Script', serif;
   font-style: italic;
   font-weight: bold;
   font-size: 40px;
@@ -61,7 +61,7 @@ title {
 }
 
 .title-text {
-  font-family: 'Tinos', serif;
+  font-family: 'Oleo Script', serif;
   font-weight: bold;
   font-style: italic;
   font-size: 24px;
@@ -71,7 +71,7 @@ title {
 
 
 .link-to-text {
-  font-family: 'Martel Sans', serif;
+  font-family: 'Oleo Script', serif;
   font-size: 16px;
   line-height: 16px;
 
