un-italicized links to show/edit/destroy

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,7 +68,7 @@ title {
 
 
 .link-to-text {
-  font-family: 'Oleo Script', serif;
+  font-family: 'Martel Sans', serif;
   font-size: 16px;
   line-height: 16px;
 
