--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,17 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light amandas-navbar">
-  <%= link_to "Recipe App", root_path, class: 'navbar-brand' %>
-  
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav navbar-right">
-        <li><%= link_to "About", pages_about_path %>
-    </ul>
-  </div>
-</nav>
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <%= link_to "Recipe App", root_path, class: 'navbar-brand' %>
+    
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav navbar-right">
+          <li><%= link_to "About", pages_about_path %>
+      </ul>
+    </div>
+  </nav>
+</div><!--container for nav bar-->
   <body>
     <%= yield %>
   </body>
