--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <%= link_to "Recipe App", root_path, class: 'navbar-brand' %>
+    <%= link_to "Home", root_path, class: 'navbar-brand' %>
     
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav navbar-right">
