fixed navbar bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,7 +74,7 @@ title {
 
 }
 
-.About-page-nav li {
+.About-page-nav {
 	list-style-type: none;
 	font-family: 'Martel Sans', sans-serif;
 	font-size: 16px;
