--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav navbar-right">
-          <li><%= link_to "About", pages_about_path %>
+          <li class="About-page-nav"><%= link_to "About", pages_about_path %> </li>
       </ul>
     </div>
   </nav>
