--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,6 +73,13 @@ title {
   line-height: 16px;
 
 }
+.navbar {
+	list-style-type: none;
+	font-family: 'Martel Sans', sans-serif;
+	font-size: 16px;
+	line-height: 30px;
+
+}
 
 .About-page-nav {
 	list-style-type: none;
