--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,12 +49,15 @@ title {
   font-weight: bold;
   font-size: 40px;
   line-height: 50px;
+  margin-bottom:1%;
 }
 
 .description-text {
   font-family: 'Martel Sans', sans-serif;
   font-size: 16px;
   line-height: 16px;
+  margin-top:1%;
+  margin-bottom:1%;
 
 }
 
@@ -63,6 +66,8 @@ title {
   font-weight: bold;
   font-size: 24px;
   line-height: 30px;
+  margin-top:1%;
+  margin-bottom:1%;
 
 }
 
