changed font for new recipe

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -92,3 +92,12 @@ title {
 	font-size: 16px;
 	line-height: 30px;
 }
+
+
+.new-recipe {
+  font-family: 'Martel Sans', sans-serif;
+  font-size: 16px;
+  line-height: 16px;
+
+
+}
