--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,6 +44,14 @@ h1 {
 
 }
 
+h3 {
+  font-family: 'Oleo Script', serif;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+
+}
+
 title {
   font-family: 'Oleo Script', serif;
   font-weight: bold;
