trying to change title and description fonts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,6 +44,14 @@ h1 {
 
 }
 
+h2 {
+  font-family: 'Oleo Script', serif;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 34px;
+
+}
+
 h3 {
   font-family: 'Oleo Script', serif;
   font-weight: bold;
