--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -115,5 +115,11 @@ title {
   font-size: 16px;
   line-height: 16px;
 
+}
+
+.body {
+  font-family: 'Martel Sans', sans-serif;
+  font-size: 16px;
+  line-height: 16px;
 
 }
