trying to change fonts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
     </div>
   </nav>
 </div><!--container for nav bar-->
+  
   <body>
-    <%= yield %>
+  <div class="new-recipe">  <%= yield %>
+  </div>
   </body>
 </html>
