--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,7 +111,8 @@ title {
 
 
 .new-recipe {
-  font-family: 'Martel Sans', sans-serif;
+  font-family: 'Oleo Script', serif;
+  font-weight: bold;
   font-size: 16px;
   line-height: 16px;
 
