--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -111,8 +111,7 @@ title {
 
 
 .new-recipe {
-  font-family: 'Oleo Script', serif;
-  font-weight: bold;
+  font-family: 'Martel Sans', sans-serif;
   font-size: 16px;
   line-height: 16px;
 
