--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -14,7 +14,8 @@
 
   <div class="form-group">
     <%= form.file_field :image %>
-       
+  </div>
+  <div class="form-group">
     <% if @recipe.image? %>
     <%= image_tag @recipe.image.url, class: "recipe-show" %>
       <%= form.check_box  :remove_image %>
