trying something with formcontrol

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -123,3 +123,14 @@ title {
   line-height: 16px;
 
 }
+
+.form-control {
+  font-family: 'Oleo Script', serif;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+  margin-top:2%;
+  margin-bottom:2%;
+
+
+}
