--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -24,12 +24,12 @@
 
   <div class="form-group">
     <%= form.label :title %>
-    <%= form.text_field :title, id: :recipe_title, class: "form-control" %>
+    <%= form.text_field :title, id: :recipe_title, class: "form-control-title" %>
   </div>
 
   <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_area :description, id: :recipe_description, class: "form-control" %>
+    <%= form.text_area :description, id: :recipe_description, class: "form-control-description" %>
   </div>
 
   <div class="form-group">
