--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -29,7 +29,7 @@
 
   <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_area :description, id: :recipe_description, class: "form-control-description" %>
+    <%= form.text_area :description, id: :recipe_description, class: "form-control" %>
   </div>
 
   <div class="form-group">
