--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -124,7 +124,7 @@ title {
 
 }
 
-.form-control-title {
+.recipe-title {
   font-family: 'Oleo Script', serif;
   font-weight: bold;
   font-size: 24px;
