--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -29,10 +29,10 @@
 
   <div class="form-group">
     <%= form.label :description %>
-    <%= form.text_area :description, id: :recipe_description, class: "form-control" %>
+    <%= form.text_area :description, id: :recipe_description, class: "form-control-description" %>
   </div>
 
-  <div class="form-group">
+  <div class="form-group-ingredients">
     <h3>Add Ingredients</h3>
       <%= form.nested_fields_for :ingredients do | ingredient | %>
         <%= ingredient.text_field :content %>
