--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,12 +125,9 @@ title {
 }
 
 .new-recipe {
-  font-family: 'Oleo Script', serif;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 30px;
-  margin-top:2%;
-  margin-bottom:2%;
+  font-family: 'Martel Sans', sans-serif;
+  font-size: 16px;
+  line-height: 16px;
 
 
 }
