--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -133,12 +133,9 @@ title {
 }
 
 .form-control-title {
-  font-family: 'Oleo Script', serif;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 30px;
-  margin-top:2%;
-  margin-bottom:2%;
+  font-family: 'Martel Sans', sans-serif;
+  font-size: 16px;
+  line-height: 20px;
   
 }
 
