--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -23,8 +23,8 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :recipe_title, class: "form-control-title" %>
+    <h3><%= form.label :title %></h3>
+    <%= form.text_field :title, id: :recipe_title, class: "form-control" %>
   </div>
 
   <div class="form-group">
