--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -98,6 +98,7 @@ title {
 	list-style-type: none;
 	font-family: 'Martel Sans', sans-serif;
 	font-size: 16px;
+	font-color: black;
 	line-height: 30px;
 
 }
@@ -106,6 +107,7 @@ title {
 	list-style-type: none;
 	font-family: 'Martel Sans', sans-serif;
 	font-size: 16px;
+	font-color: black;
 	line-height: 30px;
 }
 
