changed width to 90%

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -149,6 +149,17 @@ title {
 
 }
 
+.form-control-ingredients {
+	display: block;
+	width: 90%;
 
+}
+
+.form-control-steps {
+	display: block;
+	width: 90%;
+	
+
+}
 
 
