--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -35,7 +35,7 @@
   <div class="form-group">
     <h3>Add Ingredients</h3>
       <%= form.nested_fields_for :ingredients do | ingredient | %>
-        <%= ingredient.text_field :content, class: "form-control" %>
+        <%= ingredient.text_field :content, class: "form-control-ingredients" %>
         <%= ingredient.remove_nested_fields_link %>
 
       <% end %>
@@ -46,7 +46,7 @@
   <div class="form-group">
     <h3>Add Steps</h3>
       <%= form.nested_fields_for :steps do | step | %>
-        <%= step.text_field :direction, class: "form-control" %>
+        <%= step.text_field :direction, class: "form-control-steps" %>
         <%= step.remove_nested_fields_link %>
 
       <% end %>
