--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,12 +5,12 @@
 		
 	<% end %>
 <p>
-  <strong>Title:</strong>
+  <h3>Title:</h3>
   <%= @recipe.title %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <h3>Description:</h3>
   <%= @recipe.description %>
 </p>
 
