trying to put new recipe in its own column

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,9 +1,12 @@
 <div class="container">
 <p id="notice"><%= notice %></p>
-<%= link_to 'New Recipe', new_recipe_path %>
+
 <h1>Recipes</h1>
 <div class="row">
     <% @recipes.each do |recipe| %>
+<div class="col-md4">
+    <%= link_to 'New Recipe', new_recipe_path %>
+</div>
 <div class="col-md-4">
     <div class="recipe-box">
       <% if recipe.image? %>
