--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Martel+Sans:300|Oleo+Script:400,700" rel="stylesheet">
-    <title>RecipeDb</title>
+    <title>Amanda's Recipes</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -12,14 +12,14 @@
   </head>
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <%= link_to "Home", root_path, class: 'navbar-brand' %>
+    <%= link_to "Home", root_path, class: 'navbar-brand navbar-right' %>
     
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav navbar-right">
           <li class="About-page-nav"><%= link_to "About", pages_about_path %> </li>
       </ul>
     </div>
-  </nav>
+  </nav><!--navbar ends here-->
 </div><!--container for nav bar-->
   
   <body>
