moving navbar stuff

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
   </head>
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <%= link_to "Home", root_path, class: 'navbar-right' %>
+    <%= link_to "Home", root_path, class: 'navbar-brand' %>
     
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav navbar-right">
+      <ul class="navbar-nav navbar-brand">
           <li class="About-page-nav"><%= link_to "About", pages_about_path %> </li>
       </ul>
     </div>
