--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <%= link_to "Home", root_path, class: 'navbar-brand' %>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav navbar-brand">
+          <li class="About-page-nav"><%= link_to 'New Recipe', new_recipe_path %></li>
+      </ul>
     
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav navbar-brand">
