added padding to navbar-nav

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -180,3 +180,11 @@ a {
     background-color: #000;
   }
 }
+
+.navbar-nav {
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;	
+	
+}
