--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -181,10 +181,10 @@ a {
   }
 }
 
-.navbar-nav {
+.navbar-nav li a{
     padding-top: 15px;
     padding-right: 15px;
     padding-bottom: 15px;
     padding-left: 15px;	
-	
+
 }
