adding new background color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,6 +120,7 @@ title {
   font-family: 'Martel Sans', sans-serif;
   font-size: 16px;
   line-height: 16px;
+  background-color: #dbc3d;
 
 }
 
@@ -186,5 +187,11 @@ a {
     padding-right: 15px;
     padding-bottom: 15px;
     padding-left: 15px;	
+
+}
+
+.navbar {
+	background-color: 
+
 
 }
