--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -117,10 +117,11 @@ title {
 }
 
 .body {
+  background-color: #dbc3d0;
   font-family: 'Martel Sans', sans-serif;
   font-size: 16px;
   line-height: 16px;
-  background-color: #dbc3d;
+
 
 }
 
