--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@ img.recipe-show{
 	height: 600px;
 	position: relative;
 	box-shadow: 10px 10px 5px #888888;
-	background: #ecf0f1
+	background: #ecf0f1;
 
 }
 
@@ -117,7 +117,7 @@ title {
 }
 
 .body {
-  
+  background: #dbc3d0;
   font-family: 'Martel Sans', sans-serif;
   font-size: 16px;
   line-height: 16px;
@@ -192,7 +192,7 @@ a {
 }
 
 .navbar {
-	background-color: 
+	background-color: #5e0231;
 
 
 }
