--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,20 +11,22 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <div class="container">
-    <nav class="navbar navbar-expand-lg">
-    <%= link_to "Home", root_path, class: 'navbar-brand' %>
+    <div class=navbar-background">
+      <nav class="navbar navbar-expand-lg">
+      <%= link_to "Home", root_path, class: 'navbar-brand' %>
 
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav navbar-brand">
-          <li class="About-page-nav"><%= link_to 'New Recipe', new_recipe_path %></li>
-      </ul>
-    
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav navbar-brand">
-          <li class="About-page-nav"><%= link_to "About", pages_about_path %> </li>
-      </ul>
-    </div>
-  </nav><!--navbar ends here-->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav navbar-brand">
+            <li class="About-page-nav"><%= link_to 'New Recipe', new_recipe_path %></li>
+        </ul>
+      
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav navbar-brand">
+            <li class="About-page-nav"><%= link_to "About", pages_about_path %> </li>
+        </ul>
+      </div>
+    </nav><!--navbar ends here-->
+  </div><!--navbar-background ends here-->
 </div><!--container for nav bar-->
   
   <body>
