changed background of body

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,9 @@
 </div><!--navbar-background ends here-->
   
   <body>
-  <div class="new-recipe">  <%= yield %>
-  </div>
+    <div class="body-background">
+      <div class="new-recipe">  <%= yield %>
+      </div>
+    </div><!--body-background ends here-->
   </body>
 </html>
