--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -117,7 +117,6 @@ title {
 }
 
 .body {
-  background: #dbc3d0;
   font-family: 'Martel Sans', sans-serif;
   font-size: 16px;
   line-height: 16px;
@@ -193,6 +192,9 @@ a {
 
 .navbar-background {
 	background-color: #945D60;
+}
 
+.body-background {
+	background-color: #626E60
 
 }
