changed background colors of recipe boxes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@ img.recipe-show{
 	height: 600px;
 	position: relative;
 	box-shadow: 10px 10px 5px #888888;
-	background: #ecf0f1;
+	background: #98878F;
 
 }
 
