changing background colors yet again

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@ img.recipe-show{
 	height: 600px;
 	position: relative;
 	box-shadow: 10px 10px 5px #888888;
-	background: #f2f2f2;
+	background: #e6e6e6;
 
 }
 
@@ -195,6 +195,6 @@ a {
 }
 
 .body-background {
-	background-color: #ffffff;
+	background-color: #f2f2f2;
 
 }
