adding background color on about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,6 @@
-<div class="container">
-<h1>About</h1>
-<p>I created this Heroku application so I could upload some of my favorite recipes. Enjoy!</p>
+<div class="about-page-container">
+	<div class="container">
+		<h1>About</h1>
+		<p>I created this Heroku application so I could upload some of my favorite recipes. Enjoy!</p>
+	</div>
 </div>
