--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -192,7 +192,7 @@ a {
 
 .navbar-background {
 	background-color: #AF473C;
-	text-align:center;
+
 }
 
 .body-background {
@@ -202,5 +202,14 @@ a {
 
 .about-page-container {
 	background-color: #f2f2f2;
+
+}
+
+.navbar-brand {
+	float: right;
+	padding: 15px 15px 15px 15px;
+	font-size:18px;
+	line-height:20px;
+	height:50px;
 
 }
