--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -106,6 +106,7 @@ title {
 .About-page-nav {
 	list-style-type: none;
 
+
 }
 
 
@@ -170,6 +171,7 @@ title {
 
 a {
   color: black;
+  font-weight: bold;
   text-decoration: none;
   &:visited {
     color: black;
@@ -177,6 +179,7 @@ a {
 
   &:hover {
     text-decoration: none;
+    font-weight: bold;
     color: #fff;
     background-color: #000;
   }
@@ -187,6 +190,7 @@ a {
     padding-right: 15px;
     padding-bottom: 15px;
     padding-left: 15px;	
+    font-weight: bold;
 
 }
 
