--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,6 +94,16 @@ title {
   line-height: 16px;
 
 }
+.link-to-text li {
+	&:hover {
+    text-decoration: none;
+    font-weight: bold;
+    color: #fff;
+    background-color: #AF473C;
+    }
+
+}
+
 .navbar {
 	list-style-type: none;
 	font-family: 'Martel Sans', sans-serif;
