--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,14 +94,21 @@ title {
   line-height: 16px;
 
 }
-.link-to-text li {
-	&:hover {
+
+.link-to-text a {
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+  &:visited {
+    color: black;
+  }
+
+  &:hover {
     text-decoration: none;
     font-weight: bold;
     color: #fff;
     background-color: #AF473C;
-    }
-
+  }
 }
 
 .navbar {
